# shep-wrap

./: .gitignore  README.md  pyproject.toml  test_agent.py  test_agent_openai.py  test_dry_run_trap.py  test_scenario_dry_run_trap.py  test_scenario_empty_success_trap.py  test_scenario_hallucinated_tool_use.py
shep_wrap/: cli.py  proxy_addon.py  report.py  schema.py
shep_wrap/scenarios/: base.py  claimed_action_no_call.py  dry_run_trap.py  empty_success_trap.py  hallucinated_tool_use.py
